refactor: update view purchase order